syntax = "proto3";

option csharp_namespace = "ShoppingCartGrpcMicroserviceApp.Protos";

 service ShoppingCartProtoService{
    rpc GetShoppigCart(GetShoppigCartRequest) returns (ShoppingCartModel);
    rpc CreateShoppigCart(ShoppingCartModel) returns (ShoppingCartModel);

    rpc AddItemIntoShopppingCart (stream AddItemIntoShopppingCartRequest) returns (AddItemIntoShopppingCartResponse);
    rpc RemoveItemFromShoppingCart(RemoveItemFromShoppingCartRequest) returns (RemoveItemFromShoppingCartResponse);
 }

 message GetShoppigCartRequest{
     string username=1;
 }

 message  AddItemIntoShopppingCartRequest{
         string username=1;
         string discountCode=2;
         ShoppingCartItemModel newCartItem=3;
 }

 message AddItemIntoShopppingCartResponse{
    bool success=1;
    int32 insertCount=2; 
 }


 message  RemoveItemFromShoppingCartRequest{
         string username=1;
         ShoppingCartItemModel removeCartItem=2;
 }

 message RemoveItemFromShoppingCartResponse{
    bool success=1;
}

message ShoppingCartModel{
   string username=1;
   repeated ShoppingCartItemModel cartItems=2;
}

 message ShoppingCartItemModel{
        int32 quantity=1;
        string color=2;
        float price=3;
        int32 productId=4;
        string productname=5;
 }


